--- a/src/modules/landing-page/components/NewArrivals/components/CategoryCard/style.scss
+++ b/src/modules/landing-page/components/NewArrivals/components/CategoryCard/style.scss
@@ -1,20 +1,22 @@
-@import '../../../../../../scss/variables';
+@import "../../../../../../scss/variables";
 
 .category-card {
   min-width: 120px;
   padding: 8px 12px;
   border: 1px solid rgba(0, 0, 0, 0.432);
   color: #000;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
   text-align: center;
-  border-radius: 2px;
-  &:last-child  {
+  border-radius: 4px;
+  margin-left: 10px;
+  &:last-child {
     border: 1px solid rgba(0, 0, 0, 0.432);
   }
-  &:hover {
-    background: $main-color;
-    color: #fff;
-    border: 1px solid transparent;
-  }
+}
+
+.category-card:hover, .active {
+  background: $main-color;
+  color: #fff;
+  border: 1px solid transparent;
 }
