--- a/src/main.scss
+++ b/src/main.scss
@@ -15,3 +15,11 @@
     box-shadow: 0 0 0 0.25rem transparent;
   }
 }
+
+.truncate {
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
