--- a/src/modules/landing-page/components/CategorySection/style.scss
+++ b/src/modules/landing-page/components/CategorySection/style.scss
@@ -7,6 +7,7 @@ $marginLeft: 20px;
 
   .container {
     > div {
+      background-size:cover!important;
       width: calc(calc(100% / $columns) - $marginLeft);
       margin-left: $marginLeft;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
