--- a/src/modules/landing-page/components/DealSection/responsive.scss
+++ b/src/modules/landing-page/components/DealSection/responsive.scss
@@ -4,7 +4,11 @@
 
 
 @media screen and (max-width: $ipad){
-
+.deal__section {
+  .container > div {
+    width: 0%;
+  } 
+}
 .image-wrapper{
   display: absolute !important;
   width:0%;
@@ -12,7 +16,7 @@
 
 .text-wrapper{
   display: absolute !important;
-  width:100%;
+  width:100% !important;
   > h2 {
     background: rgb(255,255,255,0.8);
   }
