--- a/src/modules/landing-page/components/DealSection/responsive.scss
+++ b/src/modules/landing-page/components/DealSection/responsive.scss
@@ -7,6 +7,7 @@
 .deal__section {
   .container > div {
     width: 0%;
+    margin:0px;
   } 
 }
 .image-wrapper{
@@ -20,5 +21,6 @@
   > h2 {
     background: rgb(255,255,255,0.8);
   }
+  
 }
 }
