--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -1,6 +1,5 @@
 @import "../../../../scss/variables.scss";
 
-
 .dropDownBtn{
     display:none;
 }
@@ -11,7 +10,7 @@
 .closeBtn{
     display: none;
 }
-@media screen and (max-width: 991px){
+@media screen and (max-width: $ipad){
 .center-items-wrapper {
     background: rgb(255, 255, 255, 0.9);
     position: absolute;
@@ -49,6 +48,18 @@
     display: inline;
 }
     
-  }
+.cart-wrapper{
+       position: fixed !important;
+       min-height:80vh !important;
+       min-width:100vw !important;
+       max-width: 100vw !important;
+       top: 0 !important;
+  bottom: 80% !important;
+  left: 0 !important;
+  right: 0 !important;
+    transform: translateY(10%)
+    }
+
+}
 
   
