Responsive + Add Footer

--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -10,7 +10,7 @@
 .closeBtn{
     display: none;
 }
-@media screen and (max-width: $ipad){
+@media screen and (max-width: $laptop){
 .center-items-wrapper {
     background: rgb(255, 255, 255, 0.9);
     position: absolute;
