--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,5 +3,6 @@ $sliver: #b5aec4;
 $marginLeft: 20px;
 
 //responsive variables
-$ipad: 991px;
-$mobile: 420px;
+$laptop: 991px;
+$ipad: 768px;
+$mobile: 500px;
