--- a/src/modules/landing-page/components/Footer/style.scss
+++ b/src/modules/landing-page/components/Footer/style.scss
@@ -1,48 +1,47 @@
-
-
-.footer-wrapper{
-    border-top: 1px solid rgb(0,0,0,0.3);
-    width:100%;
-    display:flex;
-
-    li{
-        margin:2rem;
-        a{
+.footer-wrapper {
+    border-top: 1px solid rgb(0, 0, 0, 0.3);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    ul {
+        padding: 0;
+        gap: 20px;
+    }
+    li {
+        margin-top: 2rem;
+        // margin: 2rem;
+        a {
             text-decoration: none;
-            color:black;
+            color: black;
         }
     }
 }
 
-.contact-wrapper{
-    width:60%;
-    
-}
+// .contact-wrapper {
+//     width: 60%;
+// }
 
-.contact-list{
+.contact-list {
     list-style: none;
-    display:flex;
+    display: flex;
     flex-direction: row;
-    
 }
 
-.social-icon-wrapper{
-    width:40%;
-}
-.social-icon-list{
+.social-icon-list {
     list-style: none;
-    display:flex;
-    flex-direction: row;    
-    li{
-        padding:0.2rem;
+    display: flex;
+    flex-direction: row;
+    li {
+        padding: 0.2rem;
     }
 }
 
-.copyright-wrapper{
-    width:100%;
-    padding:2rem 4rem;
+.copyright-wrapper {
+    // width: 100%;
+    // padding: 2rem 4rem;
 }
 
-.highlight{
-    color:red;
+.highlight {
+    color: red;
 }
