--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -1,65 +1,64 @@
 @import "../../../../scss/variables.scss";
 
-.dropDownBtn{
-    display:none;
+.dropDownBtn {
+  display: none;
 }
 
-.show{
-    visibility: visible!important;
+.closeBtn {
+  display: none;
 }
-.closeBtn{
-    display: none;
-}
-@media screen and (max-width: $laptop){
-.center-items-wrapper {
+
+@media screen and (max-width: $laptop) {
+  .center-items-wrapper {
     background: rgb(255, 255, 255, 0.9);
     position: absolute;
-    width:400px;
-    height:100vh;
-    right:0;
-    top:0;
+    width: 400px;
+    height: 100vh;
+    right: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
-    z-index:1;
+    z-index: 1;
 
     visibility: hidden;
-
+    opacity: 0;
     ul {
-        display: flex;
-        flex-direction: column;
+      display: flex;
+      flex-direction: column;
       li {
         text-align: right;
         border-bottom: 1px solid black;
         padding: 1rem;
-        }
       }
     }
-.dropDownBtn{
-    display:inline;
-    
-}
-.closeBtn-wrapper{
-        text-align: right;
-        padding: 20px;
+    &.show {
+      visibility: visible;
+      opacity: 1;
+      transition: all .2s ease-in;
     }
-.closeBtn{
+  }
+  .dropDownBtn {
+    display: inline;
+  }
+  .closeBtn-wrapper {
+    text-align: right;
+    padding: 20px;
+  }
+  .closeBtn {
     font-size: 3rem;
     cursor: pointer;
     display: inline;
-}
-    
-.cart-wrapper{
-       position: fixed !important;
-       min-height:80vh !important;
-       min-width:100vw !important;
-       max-width: 100vw !important;
-       top: 0 !important;
-  bottom: 80% !important;
-  left: 0 !important;
-  right: 0 !important;
-    transform: translateY(10%)
-    }
+  }
 
+  .cart-wrapper {
+    position: fixed !important;
+    min-height: 80vh !important;
+    min-width: 100vw !important;
+    max-width: 100vw !important;
+    top: 0 !important;
+    bottom: 80% !important;
+    left: 0 !important;
+    right: 0 !important;
+    transform: translateY(10%);
+  }
 }
-
-  
