--- a/src/modules/landing-page/components/DealSection/responsive.scss
+++ b/src/modules/landing-page/components/DealSection/responsive.scss
@@ -2,6 +2,12 @@
 @import "../../../../scss/animation";
 
 
+@media screen and (max-width: $laptop){
+  .text-black{
+  font-size:16px !important;
+}
+
+}
 
 @media screen and (max-width: $ipad){
 .deal__section {
@@ -14,12 +20,15 @@
   display: absolute !important;
   width:0%;
 }
-
 .text-wrapper{
   display: absolute !important;
   width:100% !important;
   > h2 {
-    background: rgb(255,255,255,0.8);
+    background: rgba(255, 255, 255, 0.8);
+    width: fit-content;
+    margin: 0 auto;
+    padding: 8px;
+    border-radius: 8px;
   }
   
 }
