--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,20 @@
 @import "./scss/animation";
 @import "./scss/variables";
 
+Html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+}
+
+
 .main-btn {
   color: #fff;
   background: $main-color;
@@ -96,4 +110,9 @@
       background-color: $main-color;
     }
   }
+}
+
+.disabled-page {
+  pointer-events: none;
+  opacity: 0.7;
 }
