Fix Video Rendering In Mobile v2

--- a/src/modules/landing-page/components/Main/style.scss
+++ b/src/modules/landing-page/components/Main/style.scss
@@ -15,7 +15,6 @@
       width: 140px;
     }
   }
-  // background: url('../../../../assets/banner.jpg') no-repeat center center;
   height: calc(100vh);
   margin-top: 88px;
   background-size: cover;
@@ -25,4 +24,8 @@
     height: inherit;
     object-fit: cover;
   }
+}
+
+@media (-webkit-video-playable-inline) {
+  video { display: initial; }
 }
