Fix Video Rendering In Mobile v4

--- a/src/modules/landing-page/components/Main/style.scss
+++ b/src/modules/landing-page/components/Main/style.scss
@@ -15,7 +15,7 @@
       width: 140px;
     }
   }
-  height: calc(100vh);
+  height: 100vh;
   margin-top: 88px;
   background-size: cover;
   width: 100%;
