--- a/src/modules/landing-page/components/Main/responsive.scss
+++ b/src/modules/landing-page/components/Main/responsive.scss
@@ -2,6 +2,7 @@
 
 @media screen and (max-width: $ipad) {
   .main {
+    height: auto;
     > div {
       > h1 {
         font-size: 48px;
@@ -10,6 +11,10 @@
       button {
         width: 140px;
       }
+    }
+    img {
+      // height: 50%;
+      object-fit: contain;
     }
   }
 }
