--- a/src/components/ZoomInCard/style.scss
+++ b/src/components/ZoomInCard/style.scss
@@ -9,8 +9,8 @@
   transform: scale(0.9);
   background-size: 100% !important;
   border-radius: 8px;
-  transition: .3s all ease-in-out;
-  
+  transition: 0.3s all ease-in-out;
+
   &:hover {
     transform: scale(1);
   }
