--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -34,7 +34,7 @@
     &.show {
       visibility: visible;
       opacity: 1;
-      transition: all .2s ease-in;
+      transition: all 0.2s ease-in;
     }
   }
   .dropDownBtn {
