--- a/src/modules/landing-page/components/Footer/responsive.scss
+++ b/src/modules/landing-page/components/Footer/responsive.scss
@@ -1,52 +1,49 @@
 @import "../../../../scss/variables.scss";
 
-@media screen and (max-width: $laptop){
-    .footer-wrapper{
-        border-top: 1px solid rgb(0,0,0,0.3);
-        width:100%;
-        display:block;
+@media screen and (max-width: $laptop) {
+    .footer-wrapper {
+        border-top: 1px solid rgb(0, 0, 0, 0.3);
+        width: 100%;
+        display: block;
     }
-    .contact-wrapper{
-        width:100%;
-    }
- 
-    .social-icon-wrapper{
-        width:100%;
+    .contact-wrapper {
+        width: 100%;
     }
 
-    .contact-list{
+    .social-icon-wrapper {
+        width: 100%;
+    }
+
+    .contact-list {
         list-style: none;
-        display:flex;
+        display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        
     }
-    
-    .social-icon-list{
+
+    .social-icon-list {
         list-style: none;
-        display:flex;
-        flex-direction: row;    
+        display: flex;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
-     
     }
-    
 }
 
-@media screen and (max-width: $mobile){
-    .footer-wrapper{
-        *{
-            padding:0;
-            margin:0;
+@media screen and (max-width: $mobile) {
+    .footer-wrapper {
+        * {
+            padding: 0;
+            margin: 0;
             box-sizing: border-box;
         }
-      
-        li{
-            margin:0.5rem;
-            a{
+
+        li {
+            margin: 0.5rem;
+            a {
                 text-decoration: none;
-                color:black;
+                color: black;
             }
         }
     }
