--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,8 @@ $main-color: #FF9800;
 $sliver: #b5aec4;
 $marginLeft: 20px;
 
+$header-height: 88px;
+$footer-height: 168px;
 //responsive variables
 $laptop: 991px;
 $ipad: 768px;
