Fix responsive for mobile devices

--- a/src/modules/landing-page/components/CategorySection/responsive.scss
+++ b/src/modules/landing-page/components/CategorySection/responsive.scss
@@ -9,7 +9,7 @@
       > div {
         background-size: cover !important;
         width: 100%;
-        margin: 0;
+        margin: 0.5rem 0;
       }
     }
   }
