--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -62,3 +62,11 @@
     transform: translateY(10%);
   }
 }
+
+@media screen and (max-width: $mobile) {
+  .right-items-wrapper {
+    > span {
+      padding: 0 0.2rem;
+    }
+  }
+}
