--- a/src/modules/landing-page/components/BestSellerSection/responsive.scss
+++ b/src/modules/landing-page/components/BestSellerSection/responsive.scss
@@ -7,8 +7,11 @@
       display: block !important;
       background: #f2f2f2;
       .benefit-card {
-        padding: 20px;
+        padding: 1rem;
         width: 100% !important;
+        .icon-wrapper {
+          padding-right: 1rem;
+        }
       }
     }
   }
