--- a/src/modules/landing-page/components/DealSection/responsive.scss
+++ b/src/modules/landing-page/components/DealSection/responsive.scss
@@ -17,16 +17,26 @@
   .image-wrapper {
     display: absolute !important;
     width: 0%;
+    min-height: 400px;
   }
   .text-wrapper {
-    display: absolute !important;
+    display: relative !important;
     width: 100% !important;
+    gap: 0 !important;
+
     > h2 {
       background: rgba(255, 255, 255, 0.8);
       width: fit-content;
       margin: 0 auto;
       padding: 8px;
       border-radius: 8px;
+    }
+    .section-title {
+      position: relative;
+      margin-bottom: 3rem;
+    }
+    .timer-wrapper {
+      margin-bottom: 3rem;
     }
   }
 }
