--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-
     visibility: hidden;
     opacity: 0;
     ul {
@@ -65,8 +64,6 @@
 
 @media screen and (max-width: $mobile) {
   .right-items-wrapper {
-    > span {
-      padding: 0 0.2rem;
-    }
+    padding-left: 1rem;
   }
 }
