--- a/src/modules/landing-page/components/Header/style.scss
+++ b/src/modules/landing-page/components/Header/style.scss
@@ -53,12 +53,11 @@
     }
   }
   .right-items-wrapper {
+    width: 10rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    > span {
-      padding: 0 1rem;
-    }
+
     .right-items-icon {
       width: 30%;
       display: flex;
