Hao? Responsive + Added and Implement Button component

--- a/src/modules/landing-page/components/Header/style.scss
+++ b/src/modules/landing-page/components/Header/style.scss
@@ -101,6 +101,9 @@
         font-size: 12px;
         color: #fff;
       }
+      &-wrapper {
+        top: 100 ;
+      }
     }
     svg {
       color: #1e1e27;
