--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -54,11 +54,8 @@
     min-height: 80vh !important;
     min-width: 100vw !important;
     max-width: 100vw !important;
-    top: 0 !important;
-    bottom: 80% !important;
+    top: 5rem !important;
     left: 0 !important;
-    right: 0 !important;
-    transform: translateY(10%);
   }
 }
 
