--- a/src/modules/landing-page/components/Header/style.scss
+++ b/src/modules/landing-page/components/Header/style.scss
@@ -102,7 +102,7 @@
         color: #fff;
       }
       &-wrapper {
-        top: 100 ;
+        top: 100;
       }
     }
     svg {
@@ -115,4 +115,11 @@
       }
     }
   }
+}
+
+.authenticated-dropdown {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: red;
 }
