--- a/src/modules/landing-page/components/Header/AuthSubmenu/style.scss
+++ b/src/modules/landing-page/components/Header/AuthSubmenu/style.scss
@@ -2,9 +2,18 @@
 @import "../../../../../scss/animation.scss";
 
 .authenticated-dropdown {
+  display:none;
   position: absolute;
-  width: 300px;
-  height: 300px;
-  top: 200px;
-  background-color: red;
+  border: 1px solid $main-color;
+  background-color: white;;
+  border-radius: 0.2rem;
+}
+
+.show-register-box{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  > *{
+    margin:0.5rem;
+  }
 }
