--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,10 @@
-$main-color: #FF9800;
+$main-color: #ff9800;
 $sliver: #b5aec4;
 $marginLeft: 20px;
-
 $header-height: 88px;
 $footer-height: 168px;
+
+$container-border: 1px solid rgb(0, 0, 0, 0.3);
 //responsive variables
 $laptop: 991px;
 $ipad: 768px;
