--- a/src/modules/landing-page/components/Footer/style.scss
+++ b/src/modules/landing-page/components/Footer/style.scss
@@ -4,7 +4,7 @@
 }
 
 .footer-wrapper {
-  border-top: 1px solid rgb(0, 0, 0, 0.3);
+  border-top: $container-border;
   width: 100%;
   display: flex;
   align-items: center;
