Init single product page

--- a/src/modules/login-page/style.scss
+++ b/src/modules/login-page/style.scss
@@ -12,9 +12,9 @@
 
     //   z-index: -1;
     // }
-    .foreground {
-      // backdrop-filter: blur(10px);
-    }
+    // .foreground {
+    //   backdrop-filter: blur(10px);
+    // }
   }
   .footer {
     .footer-wrapper {
