--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $main-color: #ff9800;
 $sliver: #b5aec4;
+$light-sliver: #f5f5f5;
 $marginLeft: 20px;
 $header-height: 88px;
 $footer-height: 168px;
