--- a/src/modules/products-page/product-id-page/responsive.scss
+++ b/src/modules/products-page/product-id-page/responsive.scss
@@ -27,7 +27,7 @@
   .single-product-detail {
     margin-top: 2rem;
     grid-template-columns: repeat(8, 1fr) !important;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr;
   }
   .product-image-list {
     grid-row-start: 2;
@@ -48,7 +48,7 @@
 @media screen and (max-width: $mobile) {
   .product-benefit-wrapper {
     > div {
-      padding: 0.5rem;
+      padding: 0.2rem;
       > h5 {
         margin: 0;
         font-size: 16px;
