--- a/src/modules/products-page/product-id-page/style.scss
+++ b/src/modules/products-page/product-id-page/style.scss
@@ -3,6 +3,7 @@
 
 .single-product-wrapper {
     margin-top: 110px;
+    min-height: 500px;
 }
 .directory-wrapper {
     border-bottom: $container-border;
