Added Current Page Highlight on Header

--- a/src/modules/landing-page/components/Header/responsive.scss
+++ b/src/modules/landing-page/components/Header/responsive.scss
@@ -57,6 +57,17 @@
     top: 5rem !important;
     left: 0 !important;
   }
+
+  .active {
+    background: none;
+    li {
+      color: $main-color !important;
+      font-weight: 700 !important;
+    }
+  }
+  .active::after {
+    display: none;
+  }
 }
 
 @media screen and (max-width: $mobile) {
